--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/SYSAULA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.joda-time-2.9.9.jar=joda-time-2.9.9.jar
 file.reference.jsoup-1.10.2.jar=jsoup-1.10.2.jar
+file.reference.LGoodDatePicker-8.3.0.jar=LGoodDatePicker-8.3.0.jar
 file.reference.mysql-connector-java-5.1.41-bin.jar=mysql-connector-java-5.1.41-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jsoup-1.10.2.jar}:\
-    ${file.reference.mysql-connector-java-5.1.41-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.41-bin.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.LGoodDatePicker-8.3.0.jar}:\
+    ${file.reference.joda-time-2.9.9.jar}:\
+    ${libs.JasperSysAula.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
