--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.joda-time-2.9.9.jar=joda-time-2.9.9.jar
 file.reference.jsoup-1.10.2.jar=jsoup-1.10.2.jar
 file.reference.LGoodDatePicker-8.3.0.jar=LGoodDatePicker-8.3.0.jar
 file.reference.mysql-connector-java-5.1.41-bin.jar=mysql-connector-java-5.1.41-bin.jar
+file.reference.opencsv-3.9.jar=C:\\Users\\jose misael\\Downloads\\opencsv-3.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -39,7 +40,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.LGoodDatePicker-8.3.0.jar}:\
     ${file.reference.joda-time-2.9.9.jar}:\
-    ${libs.JasperSysAula.classpath}
+    ${libs.JasperSysAula.classpath}:\
+    ${file.reference.opencsv-3.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
